fix buttons tex alignment

--- a/src/components/common/SideNavMenu/_SideNavMenu.scss
+++ b/src/components/common/SideNavMenu/_SideNavMenu.scss
@@ -16,7 +16,7 @@
     &-item {
       background-color: m.t(bg-color--accent);
       color: m.t(bg-color);
-      width: calc(18% + 8em);
+      width: calc(20% + 5em);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -29,11 +29,12 @@
     &-link {
       display: flex;
       align-items: center;
-      justify-content: space-evenly;
+      justify-content: space-around;
       width: 100%;
     }
     &-icon {
-      font-size: 1.2em;
+      padding-left: 1.2em;
+      font-size: 1.3em;
     }
     &-text {
       width: 5em;
